# hello-world

./: README.md
BLE_SDK_V1.2_2751/: CMakeLists.txt  toolchain-armcc.cmake  toolchain-gnu.cmake
BLE_SDK_V1.2_2751/app/: CMakeLists.txt
BLE_SDK_V1.2_2751/app/baremetal/api/: app.h  app_task.h  rwapp_config.h
BLE_SDK_V1.2_2751/app/baremetal/src/: app.c  app_batt.c  app_dis.c  app_display.c  app_hid.c  app_ht.c  app_sec.c  app_task.c
BLE_SDK_V1.2_2751/app/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
BLE_SDK_V1.2_2751/app/freertos/src/: CMakeLists.txt
BLE_SDK_V1.2_2751/app/freertos/utils/: CMakeLists.txt  ble_task.c  ble_task.h  os_bridge.c  os_bridge.h  osapp_config.h  osapp_task.c  osapp_task.h  osapp_utils.c  osapp_utils.h  osmsg_queue.h  periph_task.c  periph_task.h  task_init.c  task_init.h
BLE_SDK_V1.2_2751/app/microarray/: Front.c  Front.h  Hardware.c  Hardware.h  MaTypes.h  User.c  User.h
BLE_SDK_V1.2_2751/app/network_processor/: CMakeLists.txt
BLE_SDK_V1.2_2751/app/network_processor/host_test/: CMakeLists.txt  main.c
BLE_SDK_V1.2_2751/fingerprint/: config.h  type_def.h
BLE_SDK_V1.2_2751/fingerprint/algFp/: CC_FPALG.c  CC_FPALG.h  algApi.h  algType.h  c200.h  gaborFilter.c  gaborFilter.h  geometry.c  geometry.h  miscFunc.c  miscFunc.h  sysCfg.h
BLE_SDK_V1.2_2751/fingerprint/logic/: fsm.c  fsm.h  synoc.c  synoc.h  system.c  system.h  yale.c  yale.h
BLE_SDK_V1.2_2751/fingerprint/mafp/: mafp_defs.h  mafp_sensor.c  mafp_sensor.h  malib.c  malib.h  platform.c  platform.h  policy.c  policy.h  sensor_hal.c  sensor_hal.h  sensor_identify.c  sensor_identify.h  sensor_reg.h  sensor_sal.c  sensor_sal.h  sensor_utils.c  sensor_utils.h  tpls_mngr.c  tpls_mngr.h
BLE_SDK_V1.2_2751/fingerprint/mafp/algTop/: afs121.c  afs121.h  algorithm.h  calCorr.c  removebkg.c
BLE_SDK_V1.2_2751/ip/: CMakeLists.txt  bx_ip_config.h
BLE_SDK_V1.2_2751/ip/ahi/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/ahi/src/: ahi.c  ahi_task.c
BLE_SDK_V1.2_2751/ip/ble/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/ble/hl/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/ble/profiles/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/ea/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/ea/src/: ea.c
BLE_SDK_V1.2_2751/ip/em/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/hci/: CMakeLists.txt
BLE_SDK_V1.2_2751/ip/hci/src/: hci.c  hci_fc.c  hci_msg.c  hci_tl.c  hci_util.c
BLE_SDK_V1.2_2751/modules/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/bxfs/: CMakeLists.txt  bxfs.c  bxfs.h  bxfs_test.c
BLE_SDK_V1.2_2751/modules/common/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/common/api/: bx_algorithm.h  bx_ring_queue.h  co_math.h
BLE_SDK_V1.2_2751/modules/common/src/: bx_algorithm.c  bx_ring_queue.c  co_list.c  co_utils.c
BLE_SDK_V1.2_2751/modules/dbg/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/dbg/src/: dbg.c  dbg_mwsgen.c  dbg_swdiag.c  dbg_task.c
BLE_SDK_V1.2_2751/modules/display/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/display/api/: display_task.h
BLE_SDK_V1.2_2751/modules/display/src/: display.c  display_env.h  display_task.c
BLE_SDK_V1.2_2751/modules/ecc_p256/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/ecc_p256/src/: ecc_p256.c
BLE_SDK_V1.2_2751/modules/h4tl/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/h4tl/src/: h4tl.c
BLE_SDK_V1.2_2751/modules/ke/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/ke/src/: ke.c  ke_event.c  ke_mem.c  ke_msg.c  ke_queue.c  ke_task.c  ke_timer.c
BLE_SDK_V1.2_2751/modules/nvds/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/nvds/api/: nvds.h  nvds_in_ram.h  nvds_tag.h  nvds_task.h  nvds_typedef.h
BLE_SDK_V1.2_2751/modules/nvds/src/: nvds_in_ram.c  nvds_tag.c  nvds_task.c
BLE_SDK_V1.2_2751/modules/rf/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/rf/api/: rf.h
BLE_SDK_V1.2_2751/modules/rf/src/: rf_apollo.c  rf_atlas.c  rf_blim.c  rf_ripple.c
BLE_SDK_V1.2_2751/modules/rwip/: CMakeLists.txt
BLE_SDK_V1.2_2751/modules/rwip/api/: rwip_config.h  rwip_task.h
BLE_SDK_V1.2_2751/modules/rwip/src/: rwip.c
BLE_SDK_V1.2_2751/plf/: CMakeLists.txt  bx_config.h
BLE_SDK_V1.2_2751/plf/apollo_00/: CMakeLists.txt  bx_pcb_config.h  bx_sys_config.h
BLE_SDK_V1.2_2751/plf/apollo_00/bootloader/: boot_memory_map.h  boot_typedef.h
BLE_SDK_V1.2_2751/plf/apollo_00/config/: reglist_ble.txt  rom_syms_GNU.txt
BLE_SDK_V1.2_2751/plf/apollo_00/src/: CMakeLists.txt
BLE_SDK_V1.2_2751/plf/bx_debug/: CMakeLists.txt  bx_dbg.c  bx_dbg.h
BLE_SDK_V1.2_2751/plf/bx_debug/armcc/: bx_dbg_asm.s
BLE_SDK_V1.2_2751/plf/bx_debug/gnu/: bx_dbg_asm.s
BLE_SDK_V1.2_2751/plf/bx_debug/internal_log/: CMakeLists.txt  internal_log.c  internal_log.h
BLE_SDK_V1.2_2751/plf/bx_debug/log/: CMakeLists.txt  log.h  sim_log.c
BLE_SDK_V1.2_2751/plf/inc/: CMakeLists.txt  compiler_flag.h  field_manipulate.h
BLE_SDK_V1.2_2751/plf/inc/cmsis/: core_cm0.h
BLE_SDK_V1.2_2751/plf/peripheral/: CMakeLists.txt  periph_common.h  periph_error.h
BLE_SDK_V1.2_2751/plf/peripheral/app_adc/: CMakeLists.txt  app_adc.c  app_adc.h  app_adc_utils.c  reg_adc.h
BLE_SDK_V1.2_2751/plf/peripheral/app_dmac/: CMakeLists.txt  app_dmac.c  app_dmac.h  app_dmac_wrapper.c  app_dmac_wrapper.h  dmac_typedef.h  reg_dmac.h
BLE_SDK_V1.2_2751/plf/peripheral/app_gpio/: CMakeLists.txt  app_gpio.c  app_gpio.h
BLE_SDK_V1.2_2751/plf/peripheral/app_hwecc/: CMakeLists.txt  app_hwecc.c  app_hwecc.h  app_hwecc_wrapper.c  app_hwecc_wrapper.h  hwecc_typedef.h  reg_ecc.h
BLE_SDK_V1.2_2751/plf/peripheral/app_iic/: CMakeLists.txt  app_iic.c  app_iic.h  reg_iic.h
BLE_SDK_V1.2_2751/plf/peripheral/led/: led.h  (+1 more)
BLE_SDK_V1.2_2751/tools/: make_mesh_sdk.bat  rm_ip_src.py
BLE_SDK_V1.2_2751/tools/doxygen/: Doxyfile  index.chm  mesh_doxyfile
BLE_SDK_V1.2_2751/tools/image_tool/: boot_ram.asm  dissemble.bat  merge.ini
BLE_SDK_V1.2_2751/tools/prog_tool/: RAMCodeSpecific_Release_1v8.mot  RAMCodeSpecific_Release_3v3.mot  flash_prog_1v8.jflash  flash_prog_3v3.jflash  prog_1v8.bat  prog_3v3.bat
BLE_SDK_V1.2_2751/tools/prog_tool_v2/: JLinkDevices.xml  prog_v2_1v8.jflash  prog_v2_3v3.jflash
BLE_SDK_V1.2_2751/tools/reg_xls2h/: gen.py  reg_xls2h.py  reg_xls2h_h.py  reg_xls2h_xls.py
(+1011 files in other folders)
